[tool.poetry]
name = "mash"
version = "0.1.0"
description = "Common library tools for Moonshine AI"

license = "MIT"

authors = [
    "Nate Harada <mash@moonshinelabs.ai>"
]

repository = ""
homepage = ""

readme = ["README.md"]
keywords = ["moonshine", "library"]

# Setup dependencies.
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pillow = "^10.0.1"
torch = {version = "^2.1.0+cu121", source = "pytorch"}
pillow-heif = "^0.13.0"
types-pillow = "^10.0.0.3"
mypy = "^1.6.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
parameterized = "^0.9.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

# MyPy is missing stubs, which is annoying

[[tool.mypy.overrides]]
module = [
    "parameterized",
    "pillow_heif"
]
ignore_missing_imports = true