[tool.poetry]
name = "mashlib"
version = "0.1.3"
description = "Common library tools for Moonshine AI"
license = "MIT"

authors = [
    "Nate Harada <mash@moonshinelabs.ai>"
]
repository = ""
homepage = ""

readme = ["README.md"]
keywords = ["moonshine", "library"]
packages = [
    { include = "mash", from = "." }
]

# Setup dependencies.
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pillow = "^10.0.1"
pillow-heif = "^0.13.0"
types-pillow = "^10.0.0.3"
mypy = "^1.6.0"
scikit-image = "^0.22.0"
loguru = "^0.7.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
requests = "^2.31.0"
rich = "^13.6.0"
smart-open = "^6.4.0"
boto3 = "^1.28.78"
moto = "^4.2.7"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
parameterized = "^0.9.0"

# MyPy is missing stubs, which is annoying
types-requests = "^2.31.0.10"
[[tool.mypy.overrides]]
module = [
    "parameterized",
    "pillow_heif",
]
ignore_missing_imports = true