[tool.poetry]
name = "mashlib"
version = "0.1.7"
description = "Common library tools for Moonshine AI"
license = "MIT"

authors = [
    "Nate Harada <mash@moonshinelabs.ai>"
]
repository = "https://github.com/moonshinelabs-ai/mash"
homepage = "https://github.com/moonshinelabs-ai/mash"

readme = ["README.md"]
keywords = ["moonshine", "library"]
packages = [
    { include = "mash", from = "." }
]

# Setup dependencies.
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.0"
pillow = "^10.0.1"
pillow-heif = "^0.13.0"
scikit-image = "^0.22.0"
loguru = "^0.7.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
requests = "^2.31.0"
rich = "^13.6.0"
smart-open = "^6.4.0"
boto3 = "^1.28.78"
moto = "^4.2.7"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
furo = "^2024.1.29"
sphinx = "^7.2.6"
myst-parser = "^2.0.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
parameterized = "^0.9.0"
isort = "^5.13.2"
black = "^24.2.0"
types-pillow = "^10.0.0.3"
types-requests = "^2.31.0.10"
boto3-stubs = "^1.34.44"
mypy = "^1.6.0"

# MyPy is missing stubs, which is annoying
[[tool.mypy.overrides]]
module = [
    "parameterized",
    "pillow_heif",
    "moto",
    "boto3",
    "botocore.exceptions",
    "smart_open"
]
ignore_missing_imports = true
